darken mobile color and fix tag wrap

--- a/css/3-modules/_header.sass
+++ b/css/3-modules/_header.sass
@@ -82,8 +82,11 @@
 		font-size: 16px
 		font-weight: 100
 		//margin-bottom: 10vh
-		+media-query(on-palm)
-			color: #838383
+		width: 40%
+		
+		+media-query($on-palm)
+			color: #828282
+			width: 90%
 		
 .icon-nav
 	list-style: none
